# create-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
create_python/: __init__.py  cli.py  scaffold.py
create_python/template/: cookiecutter.json
create_python/template/hooks/: post_gen_project.py
create_python/template/{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
create_python/template/{{cookiecutter.project_slug}}/tests/: test_main.py
create_python/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  main.py
tests/: test_cli.py  test_scaffold.py
