[project]
name = "create-python"
version = "0.1.0"
description = "CLI tool to scaffold modern Python projects with uv, ruff, and pytest."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "cookiecutter>=2.6",
    "rich>=13.0",
]

[project.scripts]
create-python = "create_python.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["create_python/template"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
